New Addition to PC - NetSci
Addition to PC - NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T21:10:40Z</date>
+						<date>2019-01-15T18:36:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7751,11 +7751,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iMyk8O5zB22Q
-								gByav4l5Ng==
+								fc/oZoQJqCH9
+								OeNKpA2XXA==
 								</data>
 								<key>Size</key>
-								<integer>244189</integer>
+								<integer>244223</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8632,7 +8632,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T19:41:59Z</date>
+						<date>2019-01-15T18:36:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8991,11 +8991,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jo3/VFWvTCTd
-								l5QfAWIAhg==
+								p7Kid+FAigec
+								F5WMCBvhYg==
 								</data>
 								<key>Size</key>
-								<integer>139251</integer>
+								<integer>139285</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11366,7 +11366,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T18:16:26Z</date>
+						<date>2019-01-15T18:36:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11415,11 +11415,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ovKd3Vsq2G0K
-								iP1/6eLzqA==
+								PLcHU20TnkxE
+								lBVDM2w+9w==
 								</data>
 								<key>Size</key>
-								<integer>5668</integer>
+								<integer>4644</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11468,7 +11468,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T18:16:26Z</date>
+						<date>2019-01-15T18:36:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12507,11 +12507,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dhmmtuBpQ76N
-								5KmRCMl2rw==
+								850ultq89Zoz
+								a0PftS6Cbg==
 								</data>
 								<key>Size</key>
-								<integer>4186</integer>
+								<integer>3475</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12595,8 +12595,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcD3LkCj
-				z7yAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcD3L8oL
+				l9WAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12606,7 +12606,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcD3LkCj0luA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcD3L8oLk96A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
