--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T19:41:59Z</date>
+						<date>2019-01-15T18:36:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jo3/VFWvTCTd
-								l5QfAWIAhg==
+								p7Kid+FAigec
+								F5WMCBvhYg==
 								</data>
 								<key>Size</key>
-								<integer>139251</integer>
+								<integer>139285</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
