--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T21:10:40Z</date>
+						<date>2019-01-15T18:36:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iMyk8O5zB22Q
-								gByav4l5Ng==
+								fc/oZoQJqCH9
+								OeNKpA2XXA==
 								</data>
 								<key>Size</key>
-								<integer>244189</integer>
+								<integer>244223</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
