added more contact us buttons NetSci
added more contact us buttons NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -6756,7 +6756,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T00:22:04Z</date>
+						<date>2019-01-15T19:30:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6915,11 +6915,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fmhrJ6Fo0LX+
-								RsHDGtbL6A==
+								Z+qZOc7ZD4vc
+								x9fq6v7/ew==
 								</data>
 								<key>Size</key>
-								<integer>168703</integer>
+								<integer>169250</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6935,11 +6935,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YggjOB2+ZESs
-								v92cFgBXLA==
+								NSN7D8MYrXDL
+								zz+lY+U2fw==
 								</data>
 								<key>Size</key>
-								<integer>93550</integer>
+								<integer>93854</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T18:36:02Z</date>
+						<date>2019-01-15T19:30:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7731,11 +7731,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								e+wKElId1auX
-								R+2lKnqDbg==
+								w8BU6aHbBN4l
+								YxYfkCDpRA==
 								</data>
 								<key>Size</key>
-								<integer>328812</integer>
+								<integer>328185</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -7751,11 +7751,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fc/oZoQJqCH9
-								OeNKpA2XXA==
+								JkbxiRF8o06A
+								VYhOF9UUjQ==
 								</data>
 								<key>Size</key>
-								<integer>244223</integer>
+								<integer>243933</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8632,7 +8632,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T18:36:02Z</date>
+						<date>2019-01-15T19:30:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8971,11 +8971,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								d5fV9IcJA2TB
-								3qEkrI2Arw==
+								jHkw0K4FG/00
+								HqBXyIB/jA==
 								</data>
 								<key>Size</key>
-								<integer>208121</integer>
+								<integer>208668</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
@@ -8991,11 +8991,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								p7Kid+FAigec
-								F5WMCBvhYg==
+								1CutFDkrbEgV
+								PRgSI6+3uA==
 								</data>
 								<key>Size</key>
-								<integer>139285</integer>
+								<integer>139589</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12595,8 +12595,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcD3L8oL
-				l9WAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcD3Ni9E
+				8GuAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12606,7 +12606,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcD3L8oLk96A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcD3Ni9E87qA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
