--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-11T00:22:04Z</date>
+						<date>2019-01-15T19:30:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -194,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fmhrJ6Fo0LX+
-								RsHDGtbL6A==
+								Z+qZOc7ZD4vc
+								x9fq6v7/ew==
 								</data>
 								<key>Size</key>
-								<integer>168703</integer>
+								<integer>169250</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -214,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YggjOB2+ZESs
-								v92cFgBXLA==
+								NSN7D8MYrXDL
+								zz+lY+U2fw==
 								</data>
 								<key>Size</key>
-								<integer>93550</integer>
+								<integer>93854</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
