--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T18:36:02Z</date>
+						<date>2019-01-15T19:30:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								d5fV9IcJA2TB
-								3qEkrI2Arw==
+								jHkw0K4FG/00
+								HqBXyIB/jA==
 								</data>
 								<key>Size</key>
-								<integer>208121</integer>
+								<integer>208668</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								p7Kid+FAigec
-								F5WMCBvhYg==
+								1CutFDkrbEgV
+								PRgSI6+3uA==
 								</data>
 								<key>Size</key>
-								<integer>139285</integer>
+								<integer>139589</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
