Schedule Overview NetSci
Schedule Overview NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6952,7 +6952,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T19:30:36Z</date>
+						<date>2019-01-15T19:35:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7731,11 +7731,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w8BU6aHbBN4l
-								YxYfkCDpRA==
+								NSQsatfEYLdk
+								eoG84hgJPA==
 								</data>
 								<key>Size</key>
-								<integer>328185</integer>
+								<integer>328292</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -7751,11 +7751,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JkbxiRF8o06A
-								VYhOF9UUjQ==
+								ziJXilbB6XnQ
+								cYW6oKP0Zg==
 								</data>
 								<key>Size</key>
-								<integer>243933</integer>
+								<integer>244163</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7884,7 +7884,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T21:10:40Z</date>
+						<date>2019-01-15T19:35:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7983,11 +7983,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dApUELxJ/y/D
-								TyAgx0xdPA==
+								EKnzNb5fA6Eo
+								AAK6SdZAbQ==
 								</data>
 								<key>Size</key>
-								<integer>138886</integer>
+								<integer>138993</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -8003,11 +8003,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CAEg+Zv6qUL+
-								UftdO+ODiQ==
+								BmCApbP6WpUG
+								qoMtmIM6tw==
 								</data>
 								<key>Size</key>
-								<integer>63982</integer>
+								<integer>64212</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12595,8 +12595,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcD3Ni9E
-				8GuAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcD3NrXP
+				iw2AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12606,7 +12606,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcD3Ni9E87qA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcD3NrXPjlSA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
