--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-14T21:10:40Z</date>
+						<date>2019-01-15T19:35:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dApUELxJ/y/D
-								TyAgx0xdPA==
+								EKnzNb5fA6Eo
+								AAK6SdZAbQ==
 								</data>
 								<key>Size</key>
-								<integer>138886</integer>
+								<integer>138993</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CAEg+Zv6qUL+
-								UftdO+ODiQ==
+								BmCApbP6WpUG
+								qoMtmIM6tw==
 								</data>
 								<key>Size</key>
-								<integer>63982</integer>
+								<integer>64212</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
