--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T19:30:36Z</date>
+						<date>2019-01-15T19:35:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -814,11 +814,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w8BU6aHbBN4l
-								YxYfkCDpRA==
+								NSQsatfEYLdk
+								eoG84hgJPA==
 								</data>
 								<key>Size</key>
-								<integer>328185</integer>
+								<integer>328292</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JkbxiRF8o06A
-								VYhOF9UUjQ==
+								ziJXilbB6XnQ
+								cYW6oKP0Zg==
 								</data>
 								<key>Size</key>
-								<integer>243933</integer>
+								<integer>244163</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
