Added Anotine to PC
Added Anotine to PC

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T19:30:36Z</date>
+						<date>2019-01-17T16:03:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1CutFDkrbEgV
-								PRgSI6+3uA==
+								DCRHBs4oHEb6
+								MpfHh24tzQ==
 								</data>
 								<key>Size</key>
-								<integer>139589</integer>
+								<integer>139605</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
