--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T19:35:05Z</date>
+						<date>2019-01-17T16:03:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ziJXilbB6XnQ
-								cYW6oKP0Zg==
+								WSqYWLECmjcE
+								X8JG699ljQ==
 								</data>
 								<key>Size</key>
-								<integer>244163</integer>
+								<integer>244179</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
