--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-15T17:40:06Z</date>
+						<date>2019-01-17T20:00:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -362,8 +362,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dBN19ifDgUi1
-								zzX1G2AFRw==
+								OOm29Dm2Q/fr
+								lOlClpM3Iw==
 								</data>
 								<key>Size</key>
 								<integer>151393</integer>
