--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -8020,7 +8020,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-18T16:06:18Z</date>
+						<date>2019-01-18T16:23:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8069,11 +8069,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SOmolOzBvDDv
-								/Qw16M0I+g==
+								F+dfwd7uHuuG
+								Z6qcB8ASGg==
 								</data>
 								<key>Size</key>
-								<integer>165014</integer>
+								<integer>165796</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -8089,11 +8089,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dXl15+qU+Xva
-								3uwEuZp31A==
+								1UNds5qqhnCg
+								HWE7YMvkpg==
 								</data>
 								<key>Size</key>
-								<integer>78231</integer>
+								<integer>78472</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11366,7 +11366,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-18T16:13:59Z</date>
+						<date>2019-01-18T16:23:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11415,11 +11415,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ebvjlAomblGD
-								1N2CLsZq+g==
+								ZQCwniSPgrOg
+								EQ7Tclrj8A==
 								</data>
 								<key>Size</key>
-								<integer>5872</integer>
+								<integer>4432</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11468,7 +11468,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-18T16:06:18Z</date>
+						<date>2019-01-18T16:23:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12507,11 +12507,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CoKTyG+SLId6
-								4xBlRWboag==
+								6gwdfJ+57wLU
+								jrpgPtIeGA==
 								</data>
 								<key>Size</key>
-								<integer>4112</integer>
+								<integer>3401</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12595,8 +12595,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcD5GWTt
-				pTOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcD5Go2Q
+				SqWAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -12606,7 +12606,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcD5GWTtp+OA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcD5Go2QTmKA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
