--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-18T16:06:18Z</date>
+						<date>2019-01-18T16:23:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SOmolOzBvDDv
-								/Qw16M0I+g==
+								F+dfwd7uHuuG
+								Z6qcB8ASGg==
 								</data>
 								<key>Size</key>
-								<integer>165014</integer>
+								<integer>165796</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dXl15+qU+Xva
-								3uwEuZp31A==
+								1UNds5qqhnCg
+								HWE7YMvkpg==
 								</data>
 								<key>Size</key>
-								<integer>78231</integer>
+								<integer>78472</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
