--- a/vermontcomplexsystems-foundation.rw/Pages/12-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Contact/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/12-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Contact/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-18T16:06:18Z</date>
+						<date>2019-01-22T14:57:31Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+7rGKuDkw3Tx
-								+j/SKe++4g==
+								uGyzHmLfPTsc
+								kUvgZpKnng==
 								</data>
 								<key>Size</key>
-								<integer>36750</integer>
+								<integer>36636</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
