--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -9628,7 +9628,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T19:04:11Z</date>
+						<date>2019-01-24T19:17:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9727,11 +9727,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tctmeCZhKeql
-								Nl9tTBzC2A==
+								ltDh4/hIOYvu
+								WlwnlsgsYA==
 								</data>
 								<key>Size</key>
-								<integer>145820</integer>
+								<integer>145929</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
@@ -9747,11 +9747,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dBNIXENH5af/
-								HPmj6JhPEw==
+								/E5hdvOp2wPs
+								xll3ogor1g==
 								</data>
 								<key>Size</key>
-								<integer>79560</integer>
+								<integer>79957</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12022,7 +12022,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T18:45:22Z</date>
+						<date>2019-01-24T19:17:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12071,11 +12071,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YgNgq5tGanP8
-								CmDTJ0XoAQ==
+								UfRXMKkzwyK0
+								Mj5brP+Luw==
 								</data>
 								<key>Size</key>
-								<integer>6007</integer>
+								<integer>4535</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12124,7 +12124,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-01-24T18:45:22Z</date>
+						<date>2019-01-24T19:17:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13163,11 +13163,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								y8iKBcszFqjb
-								FzVczsmA7g==
+								S7YKRS8qQGV/
+								Hnf9klAjwA==
 								</data>
 								<key>Size</key>
-								<integer>4408</integer>
+								<integer>3446</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13251,7 +13251,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HA/SHXA8F7gAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HA/SNw1D+agAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -13262,7 +13262,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD9IdcDxBGA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcD9I3DURQKA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
